<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GreenhouseClient</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="app_title">温室大棚客户端</string>
    <string name="register">register</string>
    <string name="add_gateway">添加网关</string>
    <string name="qrcode_register">qrcode_register</string>
    <string name="beam">照度:</string>
    <string name="humi">湿度:</string>
    <string name="temp">温度:</string>
    <string name="edit_switch">编辑警报阈值</string>
    <string name="open">打开</string>
        <string name="close">关闭</string>
    
</resources>